<resources>
    <string name="app_name">Smart Transfer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quickly_share_files_and_copy_data_between_devices_simple_and_fast">Quickly share files and copy data between devices. Simple and fast!</string>
    <string name="get_started">Get Started</string>
    <string name="open_setting">Open Setting</string>
    <string name="str_cancel">Cancel</string>
    <string name="smart_transfer_uses_these_permissions">Smart Transfer uses these \n<small>Permissions</small>!</string>
    <string name="location_service">Location Service</string>
    <string name="allow_location_access_to_find_nearby_devices">Allow location access to find \nnearby devices.</string>
    <string name="allow">Allow</string>
    <string name="allowed">Allowed</string>
    <string name="nearby_devices">Nearby Devices</string>
    <string name="find_nearby_devices_using_wi_fi_or_bluetooth">Find nearby devices using \nWi-Fi or Bluetooth</string>
    <string name="file_access">File Access</string>
    <string name="allow_storage_access_to_send_and_receive_files">Allow storage access to \nsend and receive files.</string>
    <string name="skip">Skip</string>
    <string name="please_allow_all_permissions">Please allow all permissions</string>
    <string name="permission_required">Permission Required</string>
    <string name="the_app_needs_the_following_permissions">The app needs the following permissions to function properly</string>
    <string name="please_grant_these_permissions">Please grant these permissions</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_sending">Cancel Sending</string>
    <string name="cancel_receiving">Cancel Receiving</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="some_permissions_are_permanently_denied">Some permissions are permanently denied. You can enable them in the app settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="tap_on_settings_to_enable_camera_for_intruder_selfies">Tap on settings to enable camera for intruder selfies.</string>
    <string name="required_permissions">Required Permissions</string>
    <string name="tap_on_settings_to_enable_permission">Tap on settings to enable permission.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="select_avatar">Select Avatar</string>
    <string name="profile_image">Profile Image</string>
    <string name="done">Done</string>
    <string name="max_length_message">You can enter a maximum of %1$d characters</string>
    <string name="error_found">Error Found!</string>
    <string name="error">Error</string>
    <string name="we_are_working_hard_for_better_user_n_experience">We are working hard for better user \n experience.</string>
    <string name="we_d_greatly_appreciate_if_you_can_rate_us">We\'d greatly appreciate if you can rate us.</string>
    <string name="the_best_we_can_get">The best we can get:)</string>
    <string name="feedback">Feedback</string>
    <string name="sad_title">Terrible!!!</string>
    <string name="sad_des">We really need your feedback to improve.</string>
    <string name="neutral_title">Bad!</string>
    <string name="neutral_des">We really need your feedback to improve.</string>
    <string name="happy_title">Average</string>
    <string name="happy_des">We really need your feedback to improve.</string>
    <string name="funny_title">Good</string>
    <string name="funny_des">How can we get 5 Stars?</string>
    <string name="excellent_title">We like you too!</string>
    <string name="excellent_des">Keep it up!</string>
    <string name="feedback_submitted_rating">Feedback submitted! Rating</string>
    <string name="setting">Settings</string>
    <string name="history">History</string>
    <string name="select_language">Select Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="phone_clone">Phone Clone</string>
    <string name="send">Send</string>
    <string name="sent">Sent</string>
    <string name="send_with_old_phone">Send with old phone</string>
    <string name="receiver">Receiver</string>
    <string name="receive_with_old_phone">Receive with old phone</string>
    <string name="more_feature">More Feature</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="audio">Audios</string>
    <string name="documents">Documents</string>
    <string name="apps">Apps</string>
    <string name="contacts">Contacts</string>
    <string name="total_space">Total Space</string>
    <string name="free">Free</string>
    <string name="send_details">• Make sure to connect both devices with the same Wifi.\n\n• Ask the receiver to start receiving data. \n\n• Then click send data to begin the transfer files.</string>
    <string name="receive_details">• Make sure to connect both devices with same Wifi.\n\n• Ask the sender to start sending data. \n\n• Then click the receive data to begin the receiving files.</string>
    <string name="allow_contact">Allow your contact</string>
    <string name="desp_contact">We will need your contact to give you \n better experience</string>
    <string name="allow_location">Allow your location</string>
    <string name="desp_location">We will need your location to give you \n better experience</string>
    <string name="allow_photo">Allow your photo</string>
    <string name="desp_photo">We need your photo to give you \n better experience</string>
    <string name="allow_video">Allow your video</string>
    <string name="desp_video">We need your video to give you \n better experience</string>
    <string name="allow_audio">Allow your audio</string>
    <string name="desp_audio">We will need your audio to give you \n better experience</string>
    <string name="allow_document">Allow your document</string>
    <string name="desp_document">We need your document to give you \n better experience</string>
    <string name="allow_apps">Allow your apps</string>
    <string name="desp_app">We need your apps to give you \n better experience</string>
    <string name="data_sending_is_in_progress">Data sending is in progress</string>
    <string name="sending_data">Sending Data</string>
    <string name="allow_your_contact">Allow your contact</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="no_apps_found">No apps found!</string>
    <string name="no_audio_found">No audio found!</string>
    <string name="transfer_contacts_files_photos_audios_videos_amp_more_data_with_one_click"><![CDATA[Transfer contacts, files, photos, audios, videos & more data with one click.]]></string>
    <string name="new_phone">New Phone</string>
    <string name="old_phone">Old Phone</string>
    <string name="no_contact_found">No contact found!</string>
    <string name="contact_permission">Contact Permission</string>
    <string name="give_access_to_contact_to_easily_transfer_data_between_your_devices_over_a_local_network_we_don_t_collect_or_upload_any_of_your_data_you_re_in_control_of_what_you_share">Give access to contact to easily transfer data between your devices over a local network. We don\'t collect or upload any of your data. You’re in control of what you share.</string>
    <string name="no_files_found">No files found!</string>
    <string name="categories">Categories</string>
    <string name="send_data_directly">Send data directly</string>
    <string name="receive">Receive</string>
    <string name="received">Received</string>
    <string name="receive_data_easily">Receive data easily</string>
    <string name="transfer_contacts_files_photos_videos_amp_more_data_with_one_click"><![CDATA[Transfer contacts, files, photos, videos & more data with one click.]]></string>
    <string name="direct_transfer">Direct Transfer</string>
    <string name="albums">Albums</string>
    <string name="discover_surrounding_devices_to_establish_a_connection">Discover surrounding devices\nto establish a connection</string>
    <string name="allow_access_to_photos_videos_files_on_your_device">Allow access to photos,videos,\n files on your device</string>
    <string name="Continue">Continue</string>
    <string name="no_photos_file_found">No photos file found!</string>
    <string name="you_re_now_connected">You’re now connected.</string>
    <string name="how_it_works">How it works.</string>
    <string name="waiting_for_the_connection">Waiting for the connection</string>
    <string name="nearby_device">Nearby Device</string>
    <string name="searching_your_nearby_device_make_sure_to_turn_on_its_wifi">Searching your nearby device. Make sure to turn on its wifi and connected to same wifi.</string>
    <string name="try_again">Try Again</string>
    <string name="select_data_to_send">Select Data to Send</string>
    <string name="send_your_data_to_other_device">Send your data to other device</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="no_video_files_found">No video files found!</string>
    <string name="device">Device</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="elie_john">Elie John</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="chinese">Chinese</string>
    <string name="german">German</string>
    <string name="hindi">Hindi</string>
    <string name="urdu">Urdu</string>
    <string name="quick_transfer">Quick Transfer</string>
    <string name="australia">Australia</string>
    <string name="wifi_connectivity">Wifi Connectivity</string>
    <string name="history_check">History Check</string>
    <string name="send_amp_receive"><![CDATA[Send & Receive]]></string>
    <string name="transfer_your_data_from_one_ndevice_to_other">Transfer your data from one \ndevice to other.</string>
    <string name="share_multiple_types_of_files">Share multiple types of files.</string>
    <string name="securely_transfer_files_between_devices_nconnected_to_same_wifi_network">Securely transfer files between devices connected to same wifi network.</string>
    <string name="seamlessly_clone_data_nbetween_phones">Seamlessly Clone data \nbetween Phones.</string>
    <string name="manage_your_send_and_nreceive_data_in_history">Manage your send and \nreceive data in history</string>
    <string name="files">Files</string>
    <string name="are_you_sure_you_want_to_cancel_data_sending">Are you sure you want to cancel \ndata sending?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="oops_something_went_wrong_here">Oops! Something went wrong here.</string>
    <string name="you_have_send_data_successfully">You have send data Successfully!</string>
    <string name="thankyou_for_sending_data">Thankyou for sending data.</string>
    <string name="do_you_want_to_delete_all_the_files">Do you want to delete all the files? </string>
    <string name="delete">Delete</string>
    <string name="some_files_are_selected">Some files are selected</string>
    <string name="are_you_sure_you_want_to_go_back">Are you sure, you want to go back?</string>
    <string name="sending_files">Sending Files</string>
    <string name="do_you_want_to_cancel">Do you want to cancel?</string>
    <string name="exit">Exit</string>
    <string name="exit_app">Exit App</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
</resources>