<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_18sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/permission_card_bg"
    android:backgroundTint="@color/white">


    <TextView
        android:id="@+id/tvSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/some_files_are_selected"
        android:textColor="@color/sub_heading_text_color"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_32sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/tvBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_go_back"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/sub_heading_text_color"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/tvSelection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_40sdp"
        android:text="@string/yes"
        app:rippleColor="@color/ripple_color"
        android:backgroundTint="@color/colorPrimary"
        android:paddingVertical="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBack"
        android:layout_marginEnd="@dimen/_25sdp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:strokeColor="@color/colorPrimary"
        app:rippleColor="@color/ripple_color_card"
        android:paddingVertical="@dimen/_8sdp"
        app:strokeWidth="@dimen/_1sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/skip_color"
        android:paddingHorizontal="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBack"
        android:layout_marginStart="@dimen/_25sdp"/>







</androidx.constraintlayout.widget.ConstraintLayout>