<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white"
    android:paddingVertical="@dimen/_10sdp"
    android:background="@drawable/background_permission_card">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/cancelLottie"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cancel"/>

    <TextView
        android:id="@+id/tvSendFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/sub_heading_text_color"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancelLottie"
        android:text="@string/oops_something_went_wrong_here"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/grey_black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_15sdp"
        app:rippleColor="?attr/colorControlHighlight"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@id/txtTryAgain"
        app:layout_constraintTop_toBottomOf="@id/tvSendFail"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/txtTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        style="@style/mediumTextViewStyle"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14ssp"
        app:rippleColor="?attr/colorControlHighlight"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSendFail"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>