<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_permission_card"
    android:backgroundTint="@color/white"
    android:padding="@dimen/_2sdp">





    <LinearLayout
        android:id="@+id/exit_context"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:visibility="gone"
            android:id="@+id/contactIcon"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/exit_app"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
           />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/exit_btn_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_context">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:rippleColor="?attr/colorControlHighlight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/allowBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:rippleColor="?attr/colorControlHighlight" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>