<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_15sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/permission_card_bg"
    android:backgroundTint="@color/white">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/headerTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_32sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/deleteTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_delete_all_the_files"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/roboto"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:textColor="@color/sub_heading_text_color"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/headerTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:paddingVertical="@dimen/_8sdp"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/_1sdp"
        app:rippleColor="@color/ripple_color_card"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:paddingHorizontal="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:textColor="@color/skip_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteTxt"
        app:layout_constraintEnd_toStartOf="@id/delBtn"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/deleteTxt"
        android:text="@string/delete"
        app:rippleColor="@color/ripple_color"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/cancelBtn"
        android:layout_marginStart="@dimen/_5sdp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>