<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_14sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_14sdp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_cancel" />


        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_con_per" />


        <com.google.android.material.textview.MaterialTextView
            style="@style/mediumTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/required_permissions"
            android:textSize="@dimen/_14ssp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/detectAppTextView"
            style="@style/RegularTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:text="@string/tap_on_settings_to_enable_permission"
            android:textColor="@color/sub_text_color"
            android:textSize="@dimen/_10ssp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/gotoSettingButton"
            style="@style/mediumTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:backgroundTint="@color/colorPrimary"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/go_to_settings"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="?attr/colorControlHighlight" />

    </LinearLayout>

</androidx.cardview.widget.CardView>